# simpleAuth

./: .env  .gitignore  main.py  pyproject.toml  test.db
api/v1/router/: user.py
app_core/: build.py  setup.py
config/: setting.py
controller/: auth.py  user.py
core/: build.py  setup.py
errors/: exceptions.py
handler/: exceptions.py
model/: user.py
schemas/: user.py
tools/: log.py
utils/: session.py
